--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <section id="bio">
     <h2>📖 About Me</h2>
-    <p>I’m from <Akwa-ibom></Akwa-ibom> State, Nigeria and I love solving problems using tech. I’m currently exploring web development and sharing job alerts through mikewrld!</p>
+    <p>I’m from Akwa-ibom State, Nigeria and I love solving problems using tech. I’m currently exploring web development and sharing job alerts through mikewrld!</p>
   </section>
 
   <section id="skills">
